[package]
name = "dominant-colours"
version = "0.2.0"
edition = "2021"
authors = ["Ivan Uemlianin <ivan@llaisdy.co.uk>"]
description = "Extract dominant colours from images using k-means clustering"
license = "MIT"
repository = "https://github.com/llaisdy/dominant-colours"
keywords = ["color", "image", "clustering"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
